methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: value rouge is not a member of object java.awt.Color
  fleur(Color.rouge)
              ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^